--- a/worms.html
+++ b/worms.html
@@ -34,11 +34,13 @@
     };
 
     var game = new Phaser.Game(config);
+    var player;
 
     function preload ()
     {
         this.load.image('bg', 'wintertileset/png/BG/BG.png');
         this.load.image('ground', 'wintertileset/png/Tiles/2.png');
+        this.load.spritesheet('worm', 'worms.png', { frameWidth: 18, frameHeight: 21 });
     }
 
     function create ()
@@ -55,10 +57,60 @@
       platforms.create(705, 535, 'ground')
       platforms.create(705, 535, 'ground')
       platforms.create(833, 535, 'ground')
+
+      player = this.physics.add.sprite(300, 440, 'worm');
+      player.setCollideWorldBounds(true);
+      this.physics.add.collider(player, platforms);
+
+      this.anims.create({
+        key: 'left',
+        frames: this.anims.generateFrameNumbers('worm', { start: 8, end: 13 }),
+        frameRate: 10,
+        repeat: -1
+      });
+
+      this.anims.create({
+          key: 'turn',
+          frames: [ { key: 'worm', frame: 7 } ],
+          frameRate: 20
+      });
+
+      this.anims.create({
+          key: 'right',
+          frames: this.anims.generateFrameNumbers('worm', { start: 0, end: 6 }),
+          frameRate: 10,
+          repeat: -1
+      });
+
+      cursors = this.input.keyboard.createCursorKeys();
+
     }
 
     function update ()
     {
+        if (cursors.left.isDown)
+        {
+            player.setVelocityX(-160);
+
+            player.anims.play('left', true);
+        }
+        else if (cursors.right.isDown)
+        {
+            player.setVelocityX(160);
+
+            player.anims.play('right', true);
+        }
+        else
+        {
+            player.setVelocityX(0);
+
+            player.anims.play('turn');
+        }
+
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.setVelocityY(-330);
+        }
     }
 
 </script>
