--- a/worms.html
+++ b/worms.html
@@ -4,130 +4,17 @@
     <meta charset="UTF-8" />
     <title>Worms!</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
-    <style type="text/css">
+    <script src="game.js"></script>
+    <script src="weapons.js"></script>
+    <!-- <style type="text/css">
         body {
             margin: 0;
         }
-    </style>
+    </style> -->
 </head>
-<body>
+    <body>
 
-<script type="text/javascript">
+        <script type="text/javascript"></script>
 
-
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 },
-                debug: false
-            }
-        },
-        scene: {
-            preload: preload,
-            create: create,
-            update: update
-        }
-    };
-
-    var game = new Phaser.Game(config);
-    var player;
-
-    function preload ()
-    {
-        this.load.image('bg', 'wintertileset/png/BG/BG.png');
-        this.load.image('ground', 'wintertileset/png/Tiles/2.png');
-        this.load.spritesheet('worm', 'worm2.png', { frameWidth: 12.5, frameHeight: 16 });
-        this.load.spritesheet('grenade', 'grenade-spritesheet.png', { frameWidth: 10.875, frameHeight: 16 });
-        this.load.spritesheet('worm-with-grenade', 'worm-with-grenade.png', { frameWidth: 15.666, frameHeight: 16 });
-    }
-
-    function create ()
-    {
-      this.add.image(400, 300, 'bg');
-
-      platforms = this.physics.add.staticGroup();
-
-      platforms.create(65, 535, 'ground')
-      platforms.create(193, 535, 'ground')
-      platforms.create(321, 535, 'ground')
-      platforms.create(449, 535, 'ground')
-      platforms.create(577, 535, 'ground')
-      platforms.create(705, 535, 'ground')
-      platforms.create(705, 535, 'ground')
-      platforms.create(833, 535, 'ground')
-
-      player = this.physics.add.sprite(300, 440, 'worm');
-      player.setCollideWorldBounds(true);
-      this.physics.add.collider(player, platforms);
-
-      this.anims.create({
-        key: 'left',
-        frames: this.anims.generateFrameNumbers('worm', { start: 0, end: 1 }),
-        frameRate: 4,
-        repeat: -1
-      });
-
-      this.anims.create({
-          key: 'turn',
-          frames: [ { key: 'worm', frame: 2 } ],
-          frameRate: 20
-      });
-
-      this.anims.create({
-          key: 'right',
-          frames: this.anims.generateFrameNumbers('worm', { start: 2, end: 3 }),
-          frameRate: 4,
-          repeat: -1
-      });
-      this.anims.create({
-          key: 'down',
-          frames: this.anims.generateFrameNumbers('worm-with-grenade', { start: 0, end: 0 }),
-          frameRate: 4,
-          repeat: -1
-      });
-// debugger
-      cursors = this.input.keyboard.createCursorKeys();
-      // aimButton = this.input.keyboard.addKey(Phaser.Keyboard.DOWN);
-      // debugger
-    }
-
-    function update ()
-    {
-        if (cursors.left.isDown)
-        {
-            player.setVelocityX(-40);
-
-            player.anims.play('left', true);
-        }
-        else if (cursors.right.isDown)
-        {
-            player.setVelocityX(40);
-
-            player.anims.play('right', true);
-        }
-        else
-        {
-            player.setVelocityX(0);
-
-            player.anims.play('turn');
-        }
-
-        if (cursors.up.isDown && player.body.touching.down)
-        {
-            player.setVelocityY(-100);
-        }
-        //
-        if (cursors.down.isDown) {
-            player.anims.play('down')
-        }
-
-    }
-
-</script>
-
-</body>
+    </body>
 </html>
