--- a/worms.html
+++ b/worms.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <title>Worms!</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
-    <script src="game.js"></script>
+    <!-- <script src="game.js"></script> -->
     <script src="weapons.js"></script>
+    <script src="player2.js"></script>
     <!-- <style type="text/css">
         body {
             margin: 0;
